# QuestBot

./: .gitignore  basePobeda.sql  newBasePobeda.sql  pyproject.toml
raiting/frontend/: .prettierrc  bun.lockb  package.json
raiting/frontend/src/app/: breadcrumbs.tsx  layout.tsx  page.tsx
raiting/frontend/src/components/: StudentDrawer.tsx
raiting/server/: config.py  main.py  pyproject.toml  schemas.py  utils.py
raiting/server/db/: models.py
src/: Dockerfile  config.py  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml  utils.py
src-bot/: config.py  main.py  pyproject.toml  utils.py
src-bot/db/: __init__.py  models.py
src-bot/routers/: high_grade_school.py  primary_grade_school.py  user_router.py
src-bot/states/: __init__.py
src/__pycache__/: config.cpython-312.pyc.1793527843760
src/db/: models.py
src/migrations/models/: 0_20250227022224_init.py  10_20250301164226_update.py  11_20250301164335_update.py  12_20250301182107_update.py  13_20250302181440_update.py  14_20250304164627_update.py  15_20250305185724_update.py  1_20250227023543_update.py  1_20250416010835_update.py  1_20250418085635_update.py  1_20250422030745_update.py  2_20250227023911_update.py  2_20250422030805_update.py  3_20250227202027_update.py  4_20250227202430_update.py  5_20250227204358_update.py  6_20250227222646_update.py  7_20250227223710_update.py  8_20250228005408_update.py  9_20250228005544_update.py
src/routers/: __init__.py  high_grade_school.py  primary_grade_router.py  primary_grade_school.py  user_router.py
src/states/: __init__.py
(+6 files in other folders)
